--- a/class_TokenSearch.ipynb
+++ b/class_TokenSearch.ipynb
@@ -2,24 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4828287d",
+   "metadata": {},
+   "source": [
+    "# [TLDR] grep tokens in each products `product_descriptor`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2073bf9e",
    "metadata": {},
    "source": [
-    "# [TLDR] match search tokens to some `product_descriptor` for each product\n",
+    "# [LONGER VERSION]\n",
+    "- token matching is most direct way to grab what the customer is looking for\n",
     "\n",
-    "- token matching seems most direct in grabbing home truths re what the customer is looking for\n",
-    "\n",
-    "- upon beign given a `search_string`, simple regex magic\n",
-    "  - is done to partition it into `token`s\n",
-    "  - `token` matching to the `product_descriptor` can then be done either by\n",
-    "    - exact matching (with leading and trailing spaces) or \n",
-    "    - simply on presence (is good to catch poorly partitioned `tags`)\n",
+    "- upon being given a `search_string`, simple regex magic is done\n",
+    "  - to partition the `search_string` into `token`s\n",
+    "  - I then grep these `token` in each products `product_descriptor`, matching can then be either\n",
+    "    - exact matching (must have leading and trailing spaces) or \n",
+    "    - simply on presence (presence is enough, this works well for poorly partitioned `tags`)\n",
     "  - matching can also be\n",
     "    - case sensitive or\n",
     "    - case insenstive\n",
     "  \n",
-    "- the `product_descriptor`\n",
-    "  - is built from all string like info that is predeemed to be interesting, namely\n",
+    "- `product_descriptor` is built by combining from all string like info deemed to be useful, namely\n",
     "    - `title` (~ French description)\n",
     "    - `title_orig` (~ English translation though as the translation could be wrong there is no harm in doubling up)\n",
     "    - `tags` (~ non-standard category labelling of the product)\n",
@@ -38,22 +44,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a17e201c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ipynb_setup.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1966c595",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run class_Dataset.ipynb"
    ]
@@ -68,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "135010e7",
    "metadata": {},
    "outputs": [],
@@ -87,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fdb792c1",
    "metadata": {},
    "outputs": [],
@@ -201,57 +241,6 @@
     "            return res.head(20)\n",
     "        else:\n",
     "            return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "828d01d0",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "d=Dataset()\n",
-    "ts=TokenSearch(dataset=d)\n",
-    "#ts.tokens_found(search_string='harajuku')\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['summer','short'],verbose=1)) # basic logic\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','sexy'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','goth','sexy'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['kids'],verbose=1)) # test\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['kids','ball'],verbose=1)) # test\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test show_top_n\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test results snipping\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['banana'],verbose=1)) # test results chat#\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['sandal'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['sandal','red'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_string='sandal red',verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],exact_match=True,verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_string='top red',verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='exy',verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='exy',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot skirt',exact_match=True,verbose=1)) # test non existent search\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot skin',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=False,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # no plotting\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='VANGULL',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='VANGULL banana',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='VANGULl',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,exact_match=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "ts.tokens_found(search_string='harajuku',verbose=2)\n",
-    "'''\n",
-    "None"
    ]
   }
  ],
