--- a/ml_pca.ipynb
+++ b/ml_pca.ipynb
@@ -5,20 +5,29 @@
    "id": "18c5f698",
    "metadata": {},
    "source": [
-    "# PURPOSE"
+    "# [TLDR] exploratory work with PCA"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f699184d",
+   "cell_type": "markdown",
+   "id": "7d87e4de",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "'''\n",
-    "spectral analysis of numeric data via pca\n",
-    "'''\n",
-    "None"
+    "# [LONGER VERSION]\n",
+    "- is never a bad idea to see the data while exploring and\n",
+    "- is never a bad idea to simplify the dataset by throwing away useless information\n",
+    "- I use PCA here to\n",
+    "  - understand the best preprocessing approach to take\n",
+    "  - view the data in 2D and 3D space\n",
+    "  - understand how much I can get away with by \"squeezing\" the data / variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d23b182",
+   "metadata": {},
+   "source": [
+    "# [RESULT] ACCEPT, 6 PRINCIPAL COMPONENTS SEEMS ENOUGH FOR THIS DATASET"
    ]
   },
   {
