--- a/ml_kmeans.ipynb
+++ b/ml_kmeans.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b68c198c",
+   "id": "776b1627",
    "metadata": {},
    "source": [
-    "# PURPOSE"
+    "# [TLDR] exploratory work with KMeans"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5ae540f",
+   "cell_type": "markdown",
+   "id": "b68c198c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "'''\n",
-    "simply k-means on numeric data\n",
-    "'''\n",
-    "None"
+    "# [LONGER VERSION]\n",
+    "- much like `AgglomerativeClustering`, `KMeans` seems more adept at identifying and encoding clusters than for my problem at hand"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d20d3547",
+   "metadata": {},
+   "source": [
+    "# [RESULT] PASS"
    ]
   },
   {
