--- a/class_ImageSearch.ipynb
+++ b/class_ImageSearch.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "86979940",
+   "metadata": {},
+   "source": [
+    "# [TLDR] given some src image I compute the distance to other images upon greyscaling AND blurring them and use this metric to rank images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "151b8594",
+   "metadata": {},
+   "source": [
+    "# [LONGER VERSION]\n",
+    "- build class to encapsulate image difference metrics found in the `image_similarity_measures` package\n",
+    "- can compare \n",
+    "  - `A` to `B`\n",
+    "  - `A` to some predefined set of other images\n",
+    "  - `A` to all other images\n",
+    "- can preprocess images before comparison by\n",
+    "  1. greyscaling (to avoid colours messing up comparison distances, a picture of a red top does not mean it is not sold in blue or black)\n",
+    "  2. blurring (to avoid marginally different image touchups impacting distance metrics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -73,10 +97,10 @@
     "        do_fsim : bool = False, # Feature-based similarity index (FSIM)                                   # 0 to 1, 0 == bad, 1 == identical                      # ascending=False\n",
     "        do_issm : bool = False, # Information theoretic-based Statistic Similarity Measure (ISSM)\n",
     "        do_psnr : bool = True,  # Peak signal-to-noise ratio (PSNR)                                                                                               # ascending=False\n",
-    "        do_rmse : bool = True,  # Root mean square error (RMSE)                                           # 0 to inf, 0 == identical, the smaller the better      # ascending=True\n",
-    "        do_sam  : bool = True,  # Spectral angle mapper (SAM)                                                                                                     # ascending=False\n",
-    "        do_sre  : bool = True,  # Signal to reconstruction error ratio (SRE)                                                                                      # ascending=False\n",
-    "        do_ssim : bool = True,  # Structural Similarity Index (SSIM)                                      # -1 to 1, -1 == bad, 1 == good, the larger the better  # ascending=False\n",
+    "        do_rmse : bool = False, # Root mean square error (RMSE)                                           # 0 to inf, 0 == identical, the smaller the better      # ascending=True\n",
+    "        do_sam  : bool = False, # Spectral angle mapper (SAM)                                                                                                     # ascending=False\n",
+    "        do_sre  : bool = False, # Signal to reconstruction error ratio (SRE)                                                                                      # ascending=False\n",
+    "        do_ssim : bool = False, # Structural Similarity Index (SSIM)                                      # -1 to 1, -1 == bad, 1 == good, the larger the better  # ascending=False\n",
     "        do_uiq  : bool = False, # Universal image quality index (UIQ)                                     # -1 to 1, -1 == bad, 1 == good, the larger the better  # ascending=False\n",
     "        ) -> None :\n",
     "\n",
@@ -154,16 +178,17 @@
     "        if self.do_sre:  out['sre']  = sre(src_img,  resized_tgt_img)\n",
     "        if self.do_ssim: out['ssim'] = ssim(src_img, resized_tgt_img)\n",
     "        if self.do_uiq:  out['uiq']  = uiq(src_img,  resized_tgt_img)\n",
-    "\n",
+    "        \n",
     "        #####################################\n",
     "        # return dict\n",
     "        #####################################\n",
     "        return out\n",
     "    \n",
     "    # compute similarity of some input image to all other images\n",
-    "    def img_similarity_all(\n",
+    "    def img_similarity_tgt_locs(\n",
     "        self,\n",
-    "        loc         : int            = None,  # 0 / index name to read\n",
+    "        src_loc     : int            = None,  # 0 / index name to read\n",
+    "        tgt_locs    : List[int]      = None,  # list of target lots to compare src_loc to\n",
     "        plot_src    : bool           = True,  # should plot src img\n",
     "        plot_tgt    : bool           = False, # should plot tgt img\n",
     "        grayscale   : bool           = False, # to avoid finding same item in different colour\n",
@@ -177,13 +202,18 @@
     "        #####################################\n",
     "        # get src_img\n",
     "        src_img = self.dataset.get_product_picture(\n",
-    "            loc        = loc,\n",
+    "            loc        = src_loc,\n",
     "            plot       = plot_src,\n",
     "            grayscale  = grayscale,\n",
     "            blur       = blur,\n",
     "            blur_ksize = blur_ksize,\n",
     "        )\n",
     "                \n",
+    "        #####################################\n",
+    "        # tgt_locs\n",
+    "        #####################################\n",
+    "        if tgt_locs is None: tgt_locs = self.dataset.df.index\n",
+    "            \n",
     "        #####################################\n",
     "        # function to compute distances\n",
     "        #####################################\n",
@@ -203,14 +233,14 @@
     "        \n",
     "        # parallelize the compute\n",
     "        if do_parallel:\n",
-    "            out = Parallel(n_jobs=-1)(delayed(JOBLIB_PARALLEL_FUNC)(tgt_loc) for tgt_loc in self.dataset.df.index)\n",
+    "            out = Parallel(n_jobs=-1)(delayed(JOBLIB_PARALLEL_FUNC)(tgt_loc) for tgt_loc in tgt_locs)\n",
     "        else:\n",
-    "            out = [JOBLIB_PARALLEL_FUNC(tgt_loc) for tgt_loc in self.df.dataset.index]\n",
+    "            out = [JOBLIB_PARALLEL_FUNC(tgt_loc) for tgt_loc in tgt_locs]\n",
     "        \n",
     "        #####################################\n",
     "        # return df\n",
     "        #####################################\n",
-    "        return pd.DataFrame(out,index=self.dataset.df.index)\n",
+    "        return pd.DataFrame(out,index=tgt_locs)\n",
     "\n",
     "    # show distribution of image similarity metrics for our dataset\n",
     "    def img_similarity_plot(\n",
@@ -230,8 +260,13 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "im_search=ImageSearch(dataset=Dataset())\n",
-    "im_search.img_similarity_pair(tgt_loc=2,src_loc=3)\n",
+    "d=Dataset()\n",
+    "image_search=ImageSearch(dataset=d)\n",
+    "#image_search.img_similarity_pair(tgt_loc=2,src_loc=3)                            # compare loc 2 ot loc 3\n",
+    "x=image_search.img_similarity_tgt_locs(src_loc=2)                                  # compare loc 2 to ALL other locs\n",
+    "#x.sort_values('psnr')\n",
+    "#d.get_product_picture(loc=201)\n",
+    "#image_search.img_similarity_tgt_locs(src_loc=2,tgt_locs=d.df_num.index[100:200]) # compare loc 2 to locs 100:200\n",
     "'''\n",
     "None"
    ]
