--- a/img_features.ipynb
+++ b/img_features.ipynb
@@ -2,6 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a9153b52",
+   "metadata": {},
+   "source": [
+    "# [TLDR] greyscale and/or blur images to compare images with `psnr` metric found in `image-similarity-measures`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "082d1850",
+   "metadata": {},
+   "source": [
+    "# [LONGER VERSION]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71381f5",
+   "metadata": {},
+   "source": [
+    "- in this notebook I test out different image distance metrics available in `image_similarity_measures` considering their\n",
+    "  - adeptness at finding similar images (by eyeballing results)\n",
+    "  - its speed of compute (by timing big requests)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54b8b6b5",
+   "metadata": {},
+   "source": [
+    "- re timing, some metrics\n",
+    "  - take way too long to compute (`fsim` and `uiq`)\n",
+    "  - others are much faster (`issm` and `ssim`)\n",
+    "  - and some are even faster (`psnr`, `rmse`, `sam` and `sre`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b349ac8",
+   "metadata": {},
+   "source": [
+    "- with these metrics I noticed that\n",
+    "    1. some products are listed multiple times (potential solution : throwing duplicate listings)\n",
+    "    2. some images differ only in colour (potential solution : do image differences on grey scale)\n",
+    "    3. some images differ only in image markups (potential solution : do image differences on blurred images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9048fece",
+   "metadata": {},
+   "source": [
+    "- no metric seems to be significantly better so I settle with `psnr` as it is\n",
+    "  - not only among the fastest of the choices available\n",
+    "  - it's results are similar to other measures\n",
+    "  - it's the package default\n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -73,42 +133,42 @@
     "# time each type measure singly\n",
     "###############################################################################\n",
     "st=time.time()\n",
-    "sim_raw_do_fsim = im_search.img_similarity_all(loc=3,do_fsim=True) # 1091.9723105430603\n",
+    "sim_raw_do_fsim = im_search.img_similarity_tgt_locs(loc=3,do_fsim=True) # 1091.9723105430603\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_issm = im_search.img_similarity_all(loc=3,do_issm=True) # 43.62554740905762\n",
+    "sim_raw_do_issm = im_search.img_similarity_tgt_locs(loc=3,do_issm=True) # 43.62554740905762\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_psnr = im_search.img_similarity_all(loc=3,do_psnr=True) # 10.773506164550781\n",
+    "sim_raw_do_psnr = im_search.img_similarity_tgt_locs(loc=3,do_psnr=True) # 10.773506164550781\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_rmse = im_search.img_similarity_all(loc=3,do_rmse=True) # 14.554333209991455\n",
+    "sim_raw_do_rmse = im_search.img_similarity_tgt_locs(loc=3,do_rmse=True) # 14.554333209991455\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_sam = im_search.img_similarity_all(loc=3,do_sam=True) # 16.528496980667114\n",
+    "sim_raw_do_sam = im_search.img_similarity_tgt_locs(loc=3,do_sam=True) # 16.528496980667114\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_sre = im_search.img_similarity_all(loc=3,do_sre=True) # 12.952892541885376\n",
+    "sim_raw_do_sre = im_search.img_similarity_tgt_locs(loc=3,do_sre=True) # 12.952892541885376\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_ssim = im_search.img_similarity_all(loc=3,do_ssim=True) # 38.041083097457886\n",
+    "sim_raw_do_ssim = im_search.img_similarity_tgt_locs(loc=3,do_ssim=True) # 38.041083097457886\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_uiq = im_search.img_similarity_all(loc=3,do_uiq=True)\n",
+    "sim_raw_do_uiq = im_search.img_similarity_tgt_locs(loc=3,do_uiq=True)\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "'''\n",
@@ -136,22 +196,22 @@
     "# time fastest couple of measures\n",
     "###############################################################################\n",
     "st=time.time()\n",
-    "sim_raw = im_search.img_similarity_all(loc=3) # 83.10340213775635\n",
+    "sim_raw = im_search.img_similarity_tgt_locs(src_loc=3) # 83.10340213775635\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_blur = im_search.img_similarity_all(loc=3,blur=True) # 80.66669917106628\n",
+    "sim_blur = im_search.img_similarity_tgt_locs(src_loc=3,blur=True) # 80.66669917106628\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_grayscale = im_search.img_similarity_all(loc=3,grayscale=True,plot_tgt=True) # 113.59069466590881\n",
+    "sim_grayscale = im_search.img_similarity_tgt_locs(src_loc=3,grayscale=True,plot_tgt=True) # 113.59069466590881\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_grayscale_blur = im_search.img_similarity_all(loc=3,grayscale=True,blur=True) # 74.6272337436676\n",
+    "sim_grayscale_blur = im_search.img_similarity_tgt_locs(src_loc=3,grayscale=True,blur=True) # 74.6272337436676\n",
     "et=time.time()\n",
     "print(et-st)"
    ]
@@ -216,7 +276,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a9735b54",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['psnr'].sort_values(ascending=False)[:10].index];"
@@ -226,7 +288,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0cb918c2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['rmse'].sort_values(ascending=True)[:10].index];"
@@ -236,7 +300,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a0612bcc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['sam'].sort_values(ascending=False)[:10].index];"
@@ -246,7 +312,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78497d18",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['sre'].sort_values(ascending=False)[:10].index];"
@@ -257,7 +325,7 @@
    "execution_count": null,
    "id": "6d7722f7",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -307,7 +375,7 @@
    "execution_count": null,
    "id": "50c8810f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
