--- a/class_NeighbourSearch.ipynb
+++ b/class_NeighbourSearch.ipynb
@@ -2,24 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "214a781c",
+   "id": "9f7153b6",
    "metadata": {},
    "source": [
-    "# [TLDR] given several `home planets`, we simultaneously look outwards from all home worlds to find the `nearest` new `neighbouring planets` to our civilization\n",
+    "# [TLDR] `sklearn.neighbors` logic related to `kneighbors` gathered here\n",
     "\n",
-    "- `home planets`\n",
-    "  - they denote products that match our search tokens\n",
-    "  - as they match on search tokens I consider them pretty good starting locations to look for new products from\n",
-    "  - these new products don't need to have token matches, just to be \"similar\"\n",
-    "- `neighbouring planets`\n",
-    "  - they denote products that didn't satisfy our original search token request\n",
-    "  - being \"close\" in numerical space is prob not a bad place to look for additional products\n",
-    "- `nearest`\n",
-    "  - this nearness in numerical sense, i.e. making use of numerical attributes in our dataset\n",
-    "  - numerical attributes deemed to be useful (in some sense) are cleaned up and normalized on which we can apply a numeric metric for nearness\n",
-    "    - nan's are imputed (to avoid throwing away products, imputed with population mean)\n",
-    "    - log-transformations are done to make the data more normalized\n",
-    "    - means are stripped and variances normalized to put all attributes into a similar scale (as the numeric metric is sensitive to scale)"
+    "# [LONGER VERSION]\n",
+    "- want to get `similar points` a set of `source points`\n",
+    "- `source points`\n",
+    "  - refers to products that got matched with text token grepping\n",
+    "  - they are the starting points of the search extension\n",
+    "- `similar points`\n",
+    "  - refers to non text matched products that in some way is close to the `source points`\n",
+    "- the final approach taken is to use `kneighbors` on normalized numeric data from the dataset to find `similar points`\n",
+    "  - I toyed with kmeans and agglomerative clustering before deciding on `kneighbors`"
    ]
   },
   {
@@ -86,19 +82,18 @@
     "        ) -> None :\n",
     "\n",
     "        self.dataset   = dataset\n",
-    "        self.model     = NearestNeighbors().fit(self.dataset.df_num)\n",
-    "        self.verbose   = verbose\n",
-    "    \n",
+    "        self.model     = NearestNeighbors().fit(self.dataset.df_num)    \n",
     "    \n",
     "    # given list of locs, return a larger list of size `n` x len(locs) of locs that are closest to original locs\n",
     "    def get_n_nearest_from_locs(\n",
     "        self,\n",
     "        n_nearest : int,\n",
     "        locs      : List[int],\n",
+    "        verbose   : int = 0,\n",
     "        ) -> pd.Series :\n",
-    "        if self.verbose>0: print(f'[{currentframe().f_code.co_name}] n_nearest = {n_nearest}')\n",
-    "        if self.verbose>0: print(f'[{currentframe().f_code.co_name}] locs = {locs}')\n",
-    "        if self.verbose>0: print(f'[{currentframe().f_code.co_name}] df_num = {self.dataset.df_num}, type = {type(self.dataset.df_num)}')\n",
+    "        if verbose>0: print(f'[{currentframe().f_code.co_name}] n_nearest = {n_nearest}')\n",
+    "        if verbose>0: print(f'[{currentframe().f_code.co_name}] locs = {locs}')\n",
+    "        if verbose>0: print(f'[{currentframe().f_code.co_name}] df_num = {self.dataset.df_num}, type = {type(self.dataset.df_num)}')\n",
     "        \n",
     "        # get nearest_n neighbors from each element of locs \n",
     "        distances,indices=self.model.kneighbors(\n",
@@ -107,16 +102,22 @@
     "        )\n",
     "        \n",
     "        # merge results into single vector\n",
-    "        nearest_results = pd.Series(np.ravel(distances),index=np.ravel(indices)).sort_values(ascending=True) # ordered from nearest to furthest, want globally nearest to origin family\n",
+    "        flat_distances = np.ravel(distances)\n",
+    "        flat_ilocs     = np.ravel(indices)\n",
+    "        flat_locs      = self.dataset.df_num.index[flat_ilocs]\n",
+    "        #nearest_results_ilocs = pd.Series(flat_distances,index=flat_ilocs).sort_values(ascending=True) # ordered from nearest to furthest, want globally nearest to origin family\n",
+    "        nearest_results_locs = pd.Series(flat_distances,index=flat_locs).sort_values(ascending=True) # ordered from nearest to furthest, want globally nearest to origin family\n",
     "        \n",
     "        # return\n",
-    "        return nearest_results\n",
+    "        #return nearest_results_ilocs\n",
+    "        return nearest_results_locs\n",
     "    \n",
     "    # incrementally grab more nearest neighbours from some `source_results` list until we get more than we need\n",
     "    def nearby_results(\n",
     "        self,\n",
     "        locs        : List[int],\n",
     "        min_results : int,\n",
+    "        verbose     : int = 0,\n",
     "        ) -> pd.Series :\n",
     "            \n",
     "        # protect input\n",
@@ -137,7 +138,7 @@
     "            # avoid situation where same neighbor is found jas\n",
     "            res_unique = res.groupby(res.index).min()\n",
     "        \n",
-    "            if self.verbose>0: print(f'[{currentframe().f_code.co_name}] n_nearest = {n_nearest}, len(res) = {len(res)}, len(res_unique) = {len(res_unique)}, min_results = {min_results}')\n",
+    "            if verbose>0: print(f'[{currentframe().f_code.co_name}] n_nearest = {n_nearest}, len(res) = {len(res)}, len(res_unique) = {len(res_unique)}, min_results = {min_results}')\n",
     "\n",
     "            # prep for next loop\n",
     "            n_nearest = n_nearest + 1\n",
@@ -150,20 +151,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bad7381e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "#'''\n",
+    "'''\n",
     "d=Dataset()\n",
-    "neighbour_search=NeighbourSearch(dataset=d,verbose=0)\n",
-    "neighbour_search.get_n_nearest_from_locs(n_nearest=1,locs=[172, 375, 1307, 1362, 1483, 1485])\n",
-    "neighbour_search.get_n_nearest_from_locs(n_nearest=5,locs=[0,1,2])\n",
-    "neighbour_search.get_n_nearest_from_locs(n_nearest=5,locs=[0,1,2,3,4,5,6])\n",
-    "neighbour_search.get_n_nearest_from_locs(n_nearest=100,locs=[0,1,2,3,4,5,6])\n",
-    "neighbour_search.nearby_results(locs=[0,2,4,6],min_results=10000) # ensure while loop finishes\n",
+    "neighbour_search=NeighbourSearch(dataset=d)\n",
+    "#neighbour_search.get_n_nearest_from_locs(n_nearest=5,locs=[1483, 1307, 1362, 1485, 172, 375])\n",
+    "#neighbour_search.get_n_nearest_from_locs(n_nearest=1,locs=[172, 375, 1307, 1362, 1483, 1485])\n",
+    "#neighbour_search.get_n_nearest_from_locs(n_nearest=5,locs=[0,1,2])\n",
+    "#neighbour_search.get_n_nearest_from_locs(n_nearest=5,locs=[0,1,2,3,4,5,6])\n",
+    "#neighbour_search.get_n_nearest_from_locs(n_nearest=100,locs=[0,1,2,3,4,5,6])\n",
+    "#neighbour_search.nearby_results(locs=[0,2,4,6],min_results=10000) # ensure while loop finishes\n",
     "neighbour_search.nearby_results(locs=[0,2,4,6],min_results=10) # ensure while loop finishes\n",
     "#'''\n",
-    "#None"
+    "None"
    ]
   },
   {
