--- a/ipynb_setup.ipynb
+++ b/ipynb_setup.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c70ae9f7",
+   "metadata": {},
+   "source": [
+    "# [TLDR] gather useful notebook init calls here for other notebooks to call"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "95beca72",
