--- a/class_Dataset.ipynb
+++ b/class_Dataset.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f4599d31",
+   "metadata": {},
+   "source": [
+    "# [TLDR] simple class to gather all data related actions in one place"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ebaeaee",
+   "metadata": {},
+   "source": [
+    "# [LONGER VERSION]\n",
+    "- avoid placing data manipulations everywhere\n",
+    "- data exploration done mainly in `exploration.ipynb` but also in other notebooks but prod logic is gathered here\n",
+    "  - `preselected_columns` of useful data is specified here\n",
+    "  - numerical data stripping, cleaning and normalizing is done here\n",
+    "     1. duplicated columns removed (identified in `img_features` after seeing duplicate images)\n",
+    "     2. missing data imputed with populate mean (identified in `exploration.ipynb` after failing sklearn fit_tranforms)\n",
+    "     3. log-transformations to normalized data done here (reasoning in `exploration.ipynb` after looking at qqplots)\n",
+    "     4. `StandardScaler` is done here (to bring data into useful space for `PCA` and `kneighbors` among other techiques)\n",
+    "     5. `PCA` extraction is done here (to reduce data dimensionality, amelorate outliers and to speed up processing)\n",
+    "- `product_picture` tools are gathered here\n",
+    "  1. that scrape from web \n",
+    "  2. builds a local cache to avoid hitting www.wish.com\n",
+    "  3. `plt.imshow` plotting of `product_picture`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -36,9 +65,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "#from sklearn.cluster import KMeans"
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -96,9 +123,6 @@
     "        self.raw     = self.read_csv()   # raw dataset\n",
     "        self.df      = self.clean_df()   # cleaned up dataset\n",
     "        self.df_num  = self.df_numeric() # transformed / scaled / pca'ed dataset\n",
-    "        \n",
-    "        # precompute k means\n",
-    "        #self.kmean_groups = self.precompute_kmeans()\n",
     "        \n",
     "    # simple read\n",
     "    def read_csv(self) -> pd.DataFrame :\n",
@@ -222,6 +246,7 @@
     "            fig,ax = plt.subplots(1,1)\n",
     "            ax.imshow(img)\n",
     "            ax.set_axis_off()\n",
+    "            ax.set_title(loc)\n",
     "            plt.show()     \n",
     "\n",
     "        # return\n",
@@ -257,7 +282,7 @@
     "\n",
     "        # plot imgs\n",
     "        curr_plotting_row = -1 # increments to 0 on first loop as increment condition is true\n",
-    "        for i,img in enumerate(imgs):\n",
+    "        for i,(loc,img) in enumerate(zip(locs,imgs)):\n",
     "            # plotting column location\n",
     "            curr_plotting_col = i%plot_cols\n",
     "            # increment plotting row each time we hit the 'cols'th column\n",
@@ -267,23 +292,20 @@
     "            # plot\n",
     "            if plot_rows == 1:\n",
     "                if plot_cols == 1:\n",
-    "                    ax.imshow(img) # dont need any dimension if only 1 plot\n",
+    "                    # dont need any dimension if only 1 plot\n",
+    "                    ax.imshow(img) \n",
+    "                    ax.set_axis_off()\n",
+    "                    ax.set_title(loc)\n",
     "                else:\n",
-    "                    ax[curr_plotting_col].imshow(img) # dont need 2nd dimension for ax if only 1 row\n",
+    "                    # dont need 2nd dimension for ax if only 1 row\n",
+    "                    ax[curr_plotting_col].imshow(img) \n",
+    "                    ax[curr_plotting_col].set_axis_off() \n",
+    "                    ax[curr_plotting_col].set_title(loc)\n",
     "            else:\n",
-    "                ax[curr_plotting_row,curr_plotting_col].imshow(img) # need 2nd dimension for ax if more than 1 row\n",
-    "\n",
-    "        # remove axes from ALL ax's\n",
-    "        if plot_rows == 1:\n",
-    "            if plot_cols == 1:\n",
-    "                ax.set_axis_off() # dont need 2nd dimension for ax if only 1 row\n",
-    "            else:\n",
-    "                for curr_plotting_col in range(plot_cols):\n",
-    "                    ax[curr_plotting_col].set_axis_off() # dont need 2nd dimension for ax if only 1 row\n",
-    "        else:\n",
-    "            for curr_plotting_row in range(plot_rows):\n",
-    "                for curr_plotting_col in range(plot_cols):\n",
-    "                    ax[curr_plotting_row,curr_plotting_col].set_axis_off()\n",
+    "                # need 2nd dimension for ax if more than 1 row\n",
+    "                ax[curr_plotting_row,curr_plotting_col].imshow(img)\n",
+    "                ax[curr_plotting_row,curr_plotting_col].set_axis_off() # \n",
+    "                ax[curr_plotting_row,curr_plotting_col].set_title(loc)\n",
     "\n",
     "    # plot top n index from df\n",
     "    def show_top_n(\n",
@@ -292,24 +314,7 @@
     "        n   : int = 5\n",
     "        ) -> pd.DataFrame:\n",
     "        if len(res)>0: self.get_product_pictures(locs=res.index[:n]);plt.show()\n",
-    "        return res\n",
-    "\n",
-    "    # REMOVE ME\n",
-    "    def precompute_kmeans(\n",
-    "        self,\n",
-    "        ) -> np.ndarray :\n",
-    "        # prep object              \n",
-    "        kmeans = KMeans(\n",
-    "            init         = \"random\",\n",
-    "            n_clusters   = 10, # seems use to residuals are pretty good already for 10 groups\n",
-    "            n_init       = 10,\n",
-    "            max_iter     = 300,\n",
-    "            random_state = 42\n",
-    "        )\n",
-    "\n",
-    "        kmeans.fit(self.df_num()) # apply kmeans on scaled features cos kmeans metric sensitive to scale\n",
-    "\n",
-    "        return kmeans.labels_ # predictions"
+    "        return res"
    ]
   },
   {
